--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-docx2txt==0.8
-pandas==1.4.2
+python-docx==1.1.2
+pandas==2.2.2
 stqdm==0.0.5
-streamlit==1.10.0
+streamlit==1.36.0
 openpyxl==3.0.10
